added section 3 and some styling

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Recipes</title>
+    <title>Make It Happen</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,10 +15,10 @@
 
 <body>
     <div class="container">
-        <!-- Section1 -->
+        <!-- Section-1 -->
         <section class="section-1">
             <h1 class="section-heading">
-                Recipes
+                Make It Happen
             </h1>
             <div class="section-1-imgs">
                 <img src="./img/breakfast.jpeg" alt="breakfast" class="breakfast change">
@@ -31,7 +31,7 @@
                 <img src="./img/dessert.jpg" alt="dessert" class="dessert">
             </div>
         </section>
-        <!-- Section2 -->
+        <!-- Section-2 -->
         <section class="section-2">
             <h1 class="section-heading">Best Meals</h1>
             <div class="cards-container">
@@ -50,6 +50,47 @@
                     <h3 class="card-name">Breakfast</h3>
                     <button class="card-btn">Click</button>
                 </div>
+            </div>
+        </section>
+        <!-- Section-3 -->
+        <section class="section-3">
+            <h1 class="section-heading">Recipes</h1>
+            <div class="gallery">
+                <a href="#" class="gallery-link" title="Have a look">
+                  <img src="./img/breakfast.jpeg" alt="dessert" class="gallery-img bf">
+                  <h3 class="food-name">Breakfast</h3>
+                  <p class="food-description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Est quasi excepturi cupiditate sint incidunt voluptatem tempore similique? Ullam, provident amet.</p>
+                </a>
+                <a href="#" class="gallery-link" title="Have a look">
+                    <img src="./img/healthy-snacks.jpeg" alt="dessert" class="gallery-img hs">
+                    <h3 class="food-name">Healthy <br/> Snacks</h3>
+                    <p class="food-description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Est quasi excepturi cupiditate
+                        sint incidunt voluptatem tempore similique? Ullam, provident amet.</p>
+                </a>
+                <a href="#" class="gallery-link" title="Have a look">
+                    <img src="./img/fish.jpeg" alt="dessert" class="gallery-img">
+                    <h3 class="food-name">Seafood</h3>
+                    <p class="food-description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Est quasi excepturi cupiditate
+                        sint incidunt voluptatem tempore similique? Ullam, provident amet.</p>
+                </a>
+                <a href="#" class="gallery-link" title="Have a look">
+                    <img src="./img/roast.jpeg" alt="dessert" class="gallery-img so">
+                    <h3 class="food-name">Special <br/> Occasion</h3>
+                    <p class="food-description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Est quasi excepturi cupiditate
+                        sint incidunt voluptatem tempore similique? Ullam, provident amet.</p>
+                </a>
+                <a href="#" class="gallery-link" title="Have a look">
+                    <img src="./img/steak.jpeg" alt="dessert" class="gallery-img st">
+                    <h3 class="food-name">Steak</h3>
+                    <p class="food-description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Est quasi excepturi cupiditate
+                        sint incidunt voluptatem tempore similique? Ullam, provident amet.</p>
+                </a>
+                <a href="#" class="gallery-link" title="Have a look">
+                    <img src="./img/dessert.jpg" alt="dessert" class="gallery-img de">
+                    <h3 class="food-name">Desserts</h3>
+                    <p class="food-description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Est quasi excepturi cupiditate
+                        sint incidunt voluptatem tempore similique? Ullam, provident amet.</p>
+                </a>
             </div>
         </section>
     </div>
