--- a/index.html
+++ b/index.html
@@ -93,6 +93,21 @@
                 </a>
             </div>
         </section>
+        <!-- Section-4 -->
+        <section class="section-4">
+            <div class="section-4-text">
+                <h2 class="section-4-heading">Sign Me Up</h2>
+                <p class="section-4-p">Be the First to know about new Recipes</p>
+            </div>
+            <form action="" class="signup">
+                <input type="email" class="signup-input" placeholder="Your Email">
+                <button type="submit" class="signup-btn">Submit</button>
+            </form>
+            <p class="copyright">
+                ElGraphica &copy; All Rights Reserved     
+            </p>
+            <img class="logo" src="./img/logoel.svg" alt="logo">
+        </section>
     </div>
 
 
