finished polised UI

--- a/index.html
+++ b/index.html
@@ -14,7 +14,27 @@
 </head>
 
 <body>
+    <nav class="navbar target">
+        <a href="#" class="nav-link">
+            <span>Home</span>
+        </a>
+        <a href="#" class="nav-link">
+            <span>Shop</span>
+        </a>
+        <a href="#" class="nav-link">
+            <span>Recipes</span>
+        </a>
+        <a href="#" class="nav-link">
+            <span>About Us</span>
+        </a>
+        <a href="#" class="nav-link">
+            <span>Contact</span>
+        </a>
+    </nav>
+    <div class="menu target"></div>
+
     <div class="container">
+
         <!-- Section-1 -->
         <section class="section-1">
             <h1 class="section-heading">
@@ -31,6 +51,7 @@
                 <img src="./img/dessert.jpg" alt="dessert" class="dessert">
             </div>
         </section>
+
         <!-- Section-2 -->
         <section class="section-2">
             <h1 class="section-heading">Best Meals</h1>
@@ -52,6 +73,7 @@
                 </div>
             </div>
         </section>
+
         <!-- Section-3 -->
         <section class="section-3">
             <h1 class="section-heading">Recipes</h1>
@@ -93,6 +115,7 @@
                 </a>
             </div>
         </section>
+
         <!-- Section-4 -->
         <section class="section-4">
             <div class="section-4-text">
@@ -108,6 +131,7 @@
             </p>
             <img class="logo" src="./img/logoel.svg" alt="logo">
         </section>
+
     </div>
 
 
