updated responsiveness and some styling

--- a/index.html
+++ b/index.html
@@ -54,21 +54,21 @@
 
         <!-- Section-2 -->
         <section class="section-2">
-            <h1 class="section-heading">Best Meals</h1>
+            <h1 class="section-heading">Shop</h1>
             <div class="cards-container">
-                <div class="card">
-                    <img src="./img/breakfast.jpeg" alt="breakfast" class="card-img">
-                    <h3 class="card-name">Breakfast</h3>
+                <div class="card bbq">
+                    <img src="./img/bbq.jpg" alt="bbq" class="card-img">
+                    <h3 class="card-name">BBQ</h3>
                     <button class="card-btn">Click</button>
                 </div>
-                <div class="card">
-                    <img src="./img/breakfast.jpeg" alt="breakfast" class="card-img">
-                    <h3 class="card-name">Breakfast</h3>
+                <div class="card dine">
+                    <img src="./img/dine.jpg" alt="dine" class="card-img">
+                    <h3 class="card-name">Dine</h3>
                     <button class="card-btn">Click</button>
                 </div>
-                <div class="card">
-                    <img src="./img/breakfast.jpeg" alt="breakfast" class="card-img">
-                    <h3 class="card-name">Breakfast</h3>
+                <div class="card coctails">
+                    <img src="./img/coctails.jpg" alt="coctails" class="card-img">
+                    <h3 class="card-name">Coctails</h3>
                     <button class="card-btn">Click</button>
                 </div>
             </div>
