--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Make It Happen</title>
+    <link rel="icon" href="./img/M-icon.png">
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -41,7 +42,7 @@
                 Make It Happen
             </h1>
             <div class="section-1-imgs">
-                <img src="./img/breakfast.jpeg" alt="breakfast" class="breakfast change">
+                <img src="./img/breakfast-2.jpg" alt="breakfast" class="breakfast change">
                 <img src="./img/healthy-snacks.jpeg" alt="healthy-snack" class="healthy-snack">
                 <img src="./img/cheesy.webp" alt="cheesy" class="cheesy">
                 <img src="./img/burgers.webp" alt="burger" class="burger">
@@ -79,7 +80,7 @@
             <h1 class="section-heading">Recipes</h1>
             <div class="gallery">
                 <a href="#" class="gallery-link" title="Have a look">
-                  <img src="./img/breakfast.jpeg" alt="dessert" class="gallery-img bf">
+                  <img src="./img/breakfast-1.jpeg" alt="dessert" class="gallery-img bf">
                   <h3 class="food-name">Breakfast</h3>
                   <p class="food-description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Est quasi excepturi cupiditate sint incidunt voluptatem tempore similique? Ullam, provident amet.</p>
                 </a>
